@@ -1,0 +1,9 @@
+auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
+
+
+
+test action: CMD_CAPTURE %SWAKS% --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver \
+  --drop-after-send xclient --pipe '%TEST_SERVER% --silent --domain pipe \
+  part-0000-connect-standard.txt \
+  part-0101-ehlo-all.txt \
+  '
